Fix dark mode

--- a/src/app/styles.css
+++ b/src/app/styles.css
@@ -12,6 +12,7 @@ h6,
 p,
 body,
 span,
+li,
 .image-frame {
 	transition-property: color, background-color, border-color,
 		text-decoration-color, fill, stroke;
